--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,12 @@ updates:
       - "Composer upgrades"
     open-pull-requests-limit: 100
     registries: '*'
+
+  - directory: /
+    open-pull-requests-limit: 5
+    package-ecosystem: "github-actions"
+    reviewers:
+      - "TUDOCK/devops"
+    schedule:
+      interval: daily
+      timezone: "Europe/Berlin"
